[Spigot] Fix error for non spigot servers.