@@ -1,8 +1,5 @@
 package br.net.fabiozumbi12.pixelvip.bukkit;
 
-import net.md_5.bungee.api.chat.ClickEvent;
-import net.md_5.bungee.api.chat.HoverEvent;
-import net.md_5.bungee.api.chat.TextComponent;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 
@@ -22,7 +19,7 @@ public class PVUtil {
 	}
 	
 	public String toColor(String str){
-    	return str.replaceAll("(&([a-fk-or0-9]))", "\u00A7$2"); 
+    	return str.replaceAll("(&([Aa-fkFK-ORor0-9]))", "\u00A7$2");
     }
 	
 	public long getNowMillis(){
@@ -35,7 +32,7 @@ public class PVUtil {
 	}
 	
 	public long millisToDay(String millis){
-		return TimeUnit.MILLISECONDS.toDays(new Long(millis));
+		return TimeUnit.MILLISECONDS.toDays(Long.valueOf(millis));
 	}
 	
 	public long millisToDay(Long millis){
@@ -45,12 +42,11 @@ public class PVUtil {
 	public void sendHoverKey(CommandSender sender, String key){
 		try {
 			if (plugin.getPVConfig().getBoolean(true, "configs.spigot.clickKeySuggest") && sender instanceof Player){
-				TextComponent text = new TextComponent();
+				SpigotText text = new SpigotText();
 				text.setText(plugin.getUtil().toColor(plugin.getPVConfig().getLang("timeKey")+key+" "+plugin.getPVConfig().getLang("hoverKey")));
-				text.setHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, TextComponent.fromLegacyText(plugin.getUtil().toColor(plugin.getPVConfig().getLang("hoverKey")))));
-				text.setClickEvent(new ClickEvent(ClickEvent.Action.SUGGEST_COMMAND,
-						plugin.getPVConfig().getString("/usekey ", "configs.spigot.clickSuggest").replace("{key}", key)));
-				sender.spigot().sendMessage(text);
+				text.setHover(plugin.getUtil().toColor(plugin.getPVConfig().getLang("hoverKey")));
+				text.setClick(plugin.getPVConfig().getString("/usekey ", "configs.spigot.clickSuggest").replace("{key}", key));
+				text.sendMessage(sender);
 			} else {
 				sender.sendMessage(plugin.getUtil().toColor(plugin.getPVConfig().getLang("timeKey")+key));
 			}
@@ -76,9 +72,9 @@ public class PVUtil {
 			src.sendMessage(plugin.getUtil().toColor(plugin.getPVConfig().getLang("_pluginTag","vipInfoFor")+name+":"));
 			src.sendMessage(plugin.getUtil().toColor("&b---------------------------------------------"));
 			vips.stream().filter(v->v.length == 5).forEach((vipInfo)->{
-				String time = plugin.getUtil().millisToMessage(new Long(vipInfo[0]));
+				String time = plugin.getUtil().millisToMessage(Long.valueOf(vipInfo[0]));
 				if (plugin.getPVConfig().isVipActive(vipInfo[1], UUID)){
-					time = plugin.getUtil().millisToMessage(new Long(vipInfo[0])-plugin.getUtil().getNowMillis());
+					time = plugin.getUtil().millisToMessage(Long.valueOf(vipInfo[0])-plugin.getUtil().getNowMillis());
 				}
 		    	src.sendMessage(plugin.getUtil().toColor(plugin.getPVConfig().getLang("timeLeft")+time));
 		    	src.sendMessage(plugin.getUtil().toColor(plugin.getPVConfig().getLang("timeGroup")+vipInfo[1]));		
@@ -98,13 +94,13 @@ public class PVUtil {
 		long min = TimeUnit.MILLISECONDS.toMinutes((millis-TimeUnit.DAYS.toMillis(days))-TimeUnit.HOURS.toMillis(hour));
 		StringBuilder msg = new StringBuilder();
 		if (days > 0){
-			msg.append("&6"+days+plugin.getPVConfig().getLang("days")+", ");
+			msg.append("&6").append(days).append(plugin.getPVConfig().getLang("days")).append(", ");
 		}
 		if (hour > 0 ){
-			msg.append("&6"+hour+plugin.getPVConfig().getLang("hours")+", ");
+			msg.append("&6").append(hour).append(plugin.getPVConfig().getLang("hours")).append(", ");
 		}
 		if (min > 0){
-			msg.append("&6"+min+plugin.getPVConfig().getLang("minutes")+", ");
+			msg.append("&6").append(min).append(plugin.getPVConfig().getLang("minutes")).append(", ");
 		}
 		try{
 			msg = msg.replace(msg.lastIndexOf(","), msg.lastIndexOf(",")+1, ".").replace(msg.lastIndexOf(","), msg.lastIndexOf(",")+1, plugin.getPVConfig().getLang("and"));
